last checkin of day 2

--- a/product/config/app.config.erb
+++ b/product/config/app.config.erb
@@ -26,7 +26,7 @@
     </pages>
     <authentication mode="Windows"/>
     <httpHandlers>
-      <add path="*.store"
+      <add path="*.nyc"
         verb="*"
         type="nothinbutdotnetstore.web.core.aspnet.BasicHandler, nothinbutdotnetstore"/>
         </httpHandlers>
