--- a/product/nothinbutdotnetstore.web.ui/views/Store.master
+++ b/product/nothinbutdotnetstore.web.ui/views/Store.master
@@ -55,7 +55,7 @@
                     <li>
                         <ul>
                             <li><a href="StoreDirectory.aspx">Store Directory</a></li>
-                            <li><a href="thisisworking.store">Department Browser</a></li>
+                            <li><a href="DoesNotMatter.nyc">Department Browser</a></li>
                         </ul>
                     
                     </li>           
