--- a/product/nothinbutdotnetstore.web.ui/views/Store.master
+++ b/product/nothinbutdotnetstore.web.ui/views/Store.master
@@ -1,6 +1,8 @@
 <%@ Register TagPrefix="NothinButDotNetStore" TagName="ShoppingCart" src="shoppingcartsidebar.ascx"  %>
 <%@ Register TagPrefix="NothinButDotNetStore" TagName="Footer" src="Footer.ascx" %>
 <%@ Master Language="C#" AutoEventWireup="true" %>
+<%@ Import Namespace="nothinbutdotnetstore.web.application.catalogbrowsing" %>
+<%@ Import Namespace="nothinbutdotnetstore.web.core" %>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/tr/xhtml1/DTD/xhtml1-transitional.dtd">
 
@@ -55,7 +57,7 @@
                     <li>
                         <ul>
                             <li><a href="StoreDirectory.aspx">Store Directory</a></li>
-                            <li><a href="DoesNotMatter.nyc">Department Browser</a></li>
+                            <li><a href="<%= Url.to_run<ViewTheMainDepartmentsInTheStore>() %>">Department Browser</a></li>
                         </ul>
                     
                     </li>           
